{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 1346,
  "lineage": "ead8a4fc-8b4c-ee51-3725-436d90f0f7c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06848bc5b396eded2",
            "arn": "arn:aws:ec2:ap-south-1:782832397014:elastic-ip/eipalloc-06848bc5b396eded2",
            "association_id": "eipassoc-04aba5102a08e83b7",
            "domain": "vpc",
            "id": "eipalloc-06848bc5b396eded2",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c79632689ba89f72",
            "private_dns": "ip-10-0-1-120.ap-south-1.compute.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-3-110-251-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.251.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f994c719fc62e9e",
            "arn": "arn:aws:ec2:ap-south-1:782832397014:instance/i-07405a9025eef6d98",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07405a9025eef6d98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-chatapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0b9e38fbb136efe",
            "private_dns": "ip-10-0-101-92.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02aff02575542b2d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6415b8c25f88307",
            "tags": {
              "Name": "terra-backend-server"
            },
            "tags_all": {
              "Name": "terra-backend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0424a96b032198a62"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_chatapp_key",
            "aws_security_group.backend",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_ami.backend",
            "data.aws_availability_zones.available",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2af51e265bd5e0e",
            "arn": "arn:aws:ec2:ap-south-1:782832397014:instance/i-0aef49b2c39e5c46c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aef49b2c39e5c46c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-chatapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d49a5f3a38b5b2e",
            "private_dns": "ip-10-0-101-72.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8c9e9a946e58cda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6415b8c25f88307",
            "tags": {
              "Name": "terra-database-server"
            },
            "tags_all": {
              "Name": "terra-database-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07716cd8f3c8921fa"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_key_pair.terra_chatapp_key",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.database",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2af51e265bd5e0e",
            "arn": "arn:aws:ec2:ap-south-1:782832397014:instance/i-0890ef240e67bb601",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0890ef240e67bb601",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-chatapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4da6e657c0c92a2",
            "private_dns": "ip-10-0-1-81.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_ip": "43.205.242.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4e8b80b848ae2e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034d532e7a4438f9f",
            "tags": {
              "Name": "terra-frontend-server"
            },
            "tags_all": {
              "Name": "terra-frontend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d295bae22158f9b"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_instance.database",
            "aws_key_pair.terra_chatapp_key",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.database",
            "aws_security_group.frontend",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "local_file.terra_chatapp_local",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:internet-gateway/igw-0c2aac9208d93f28c",
            "id": "igw-0c2aac9208d93f28c",
            "owner_id": "782832397014",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06848bc5b396eded2",
            "association_id": "eipassoc-04aba5102a08e83b7",
            "connectivity_type": "public",
            "id": "nat-0e8f097b5a1d56da8",
            "network_interface_id": "eni-0c79632689ba89f72",
            "private_ip": "10.0.1.120",
            "public_ip": "3.110.251.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-034d532e7a4438f9f",
            "tags": {
              "Name": "terra-ngw"
            },
            "tags_all": {
              "Name": "terra-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:route-table/rtb-0bc80460fc2c8cb20",
            "id": "rtb-0bc80460fc2c8cb20",
            "owner_id": "782832397014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8f097b5a1d56da8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-private-route-table"
            },
            "tags_all": {
              "Name": "terra-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:route-table/rtb-072d05a774ca38b1f",
            "id": "rtb-072d05a774ca38b1f",
            "owner_id": "782832397014",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2aac9208d93f28c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-public-route-table"
            },
            "tags_all": {
              "Name": "terra-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fee37e539e080ec",
            "route_table_id": "rtb-0bc80460fc2c8cb20",
            "subnet_id": "subnet-0c6415b8c25f88307"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba71f60ba295ded4",
            "route_table_id": "rtb-0bc80460fc2c8cb20",
            "subnet_id": "subnet-05761b2f5561b91c2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0195a511c03edaeab",
            "route_table_id": "rtb-072d05a774ca38b1f",
            "subnet_id": "subnet-034d532e7a4438f9f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00adc7b7b217d63b1",
            "route_table_id": "rtb-072d05a774ca38b1f",
            "subnet_id": "subnet-08881bc56b0633e61"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:security-group/sg-0424a96b032198a62",
            "description": "Security Group for backend server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0424a96b032198a62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terra-backend-sg",
            "name_prefix": "",
            "owner_id": "782832397014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-backend-sg"
            },
            "tags_all": {
              "Name": "terra-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:security-group/sg-07716cd8f3c8921fa",
            "description": "Security Group for database server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07716cd8f3c8921fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.102.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terra-database-sg",
            "name_prefix": "",
            "owner_id": "782832397014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-database-sg"
            },
            "tags_all": {
              "Name": "terra-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:security-group/sg-07d295bae22158f9b",
            "description": "Security Group for frontend web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d295bae22158f9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra-frontend-web-sg",
            "name_prefix": "",
            "owner_id": "782832397014",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-frontend-web-sg"
            },
            "tags_all": {
              "Name": "terra-frontend-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:subnet/subnet-0c6415b8c25f88307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6415b8c25f88307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782832397014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-private-subnet-01"
            },
            "tags_all": {
              "Name": "terra-private-subnet-01"
            },
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "dependencies": [
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:subnet/subnet-05761b2f5561b91c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05761b2f5561b91c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782832397014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-private-subnet-02"
            },
            "tags_all": {
              "Name": "terra-private-subnet-02"
            },
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "dependencies": [
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:subnet/subnet-034d532e7a4438f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034d532e7a4438f9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782832397014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet-01"
            },
            "tags_all": {
              "Name": "terra-public-subnet-01"
            },
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "dependencies": [
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:subnet/subnet-08881bc56b0633e61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08881bc56b0633e61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782832397014",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public-subnet-02"
            },
            "tags_all": {
              "Name": "terra-public-subnet-02"
            },
            "vpc_id": "vpc-031bb22e12866ad99"
          },
          "dependencies": [
            "aws_vpc.terra_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:782832397014:vpc/vpc-031bb22e12866ad99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dcfefc057b0c2620",
            "default_route_table_id": "rtb-0c8ed5ed99c3dea8a",
            "default_security_group_id": "sg-03d0193da42870a8c",
            "dhcp_options_id": "dopt-ae6d60c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031bb22e12866ad99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8ed5ed99c3dea8a",
            "owner_id": "782832397014",
            "tags": {
              "Name": "terra-vpc"
            },
            "tags_all": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}